<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.drools</groupId>
    <artifactId>droolsjbpm-parent</artifactId>
    <version>5.5.0-SNAPSHOT</version>
  </parent>

  <artifactId>guvnorng-showcase</artifactId>
  <packaging>war</packaging>

  <name>GuvnorNG Showcase</name>
  <description>GuvnorNG Showcase</description>

  <properties>
    <errai.version>2.1-SNAPSHOT</errai.version>
    <uberfire.version>0.1-SNAPSHOT</uberfire.version>
    <jetty.version>6.1.25</jetty.version>
    <gwt.maven.version>2.4.0</gwt.maven.version>
    <jetty.version>6.1.25</jetty.version>
    <weld.version>1.1.6.Final</weld.version>
    <uberfire.version>0.1-SNAPSHOT</uberfire.version>
    <resteasy.version>2.3.3.Final</resteasy.version>
    <gwt.version>2.4.0</gwt.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.uberfire</groupId>
      <artifactId>vfs-api</artifactId>
      <version>${uberfire.version}</version>
    </dependency>

    <dependency>
      <groupId>org.uberfire</groupId>
      <artifactId>backend-server</artifactId>
      <version>${uberfire.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.uberfire</groupId>
      <artifactId>backend-api</artifactId>
      <version>${uberfire.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.uberfire</groupId>
      <artifactId>widgets-core</artifactId>
      <version>${uberfire.version}</version>
    </dependency>

    <dependency>
      <groupId>org.uberfire</groupId>
      <artifactId>uberfire-workbench</artifactId>
      <version>${uberfire.version}</version>
    </dependency>

    <dependency>
      <groupId>org.uberfire</groupId>
      <artifactId>uberfire-api</artifactId>
      <version>${uberfire.version}</version>
    </dependency>

    <dependency>
      <groupId>org.drools</groupId>
      <artifactId>guvnorng-repository</artifactId>
      <version>${project.version}</version>
    </dependency>
    
    <dependency>
      <groupId>javax.enterprise</groupId>
      <artifactId>cdi-api</artifactId>
      <version>1.0-SP4</version>
      <scope>provided</scope>
    </dependency>

    <!-- Errai Core -->
    <dependency>
      <groupId>org.jboss.errai</groupId>
      <artifactId>errai-bus</artifactId>
      <version>${errai.version}</version>
    </dependency>

    <!-- CDI Integration Modules -->
    <dependency>
      <groupId>org.jboss.errai</groupId>
      <artifactId>errai-cdi-client</artifactId>
      <version>${errai.version}</version>
    </dependency>
    <!-- TODO I'd like to remove this from here, but it's a dependency of errai-cdi-client -->
    <dependency>
      <groupId>org.jboss.errai</groupId>
      <artifactId>errai-javax-enterprise</artifactId>
      <scope>provided</scope>
      <version>${errai.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.errai</groupId>
      <artifactId>errai-uibinder</artifactId>
      <version>${errai.version}</version>
    </dependency>

    <!-- CDI Development Utils -->
    <!-- This must be placed above com.google.gwt:gwt-dev to override the Jetty that is present there -->
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty</artifactId>
      <version>${jetty.version}</version>
    </dependency>

    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-plus</artifactId>
      <version>${jetty.version}</version>
    </dependency>

    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-naming</artifactId>
      <version>${jetty.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.errai</groupId>
      <artifactId>errai-weld-integration</artifactId>
      <version>${errai.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.weld.se</groupId>
      <artifactId>weld-se-core</artifactId>
      <version>${weld.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.weld.servlet</groupId>
      <artifactId>weld-servlet</artifactId>
      <version>${weld.version}</version>
    </dependency>

    <!-- GWT and GWT Extensions -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- TODO weird! -->
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>12.0</version>
    </dependency>

    <dependency>
      <groupId>org.drools</groupId>
      <artifactId>drools-compiler</artifactId>
      <version>5.4.0.Final</version>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jdt.core.compiler</groupId>
          <artifactId>ecj</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!--<dependency>-->
      <!--<groupId>org.eclipse.jdt.core.compiler</groupId>-->
      <!--<artifactId>ecj</artifactId>-->
      <!--<scope>runtime</scope>-->
    <!--</dependency>-->
    
    <dependency>
      <groupId>org.drools</groupId>
      <artifactId>droolsjbpm-ide-common</artifactId>
      <version>5.4.0.Final</version>
    </dependency>
    
  </dependencies>

  <build>
    <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <fork>false</fork>
          <meminitial>128m</meminitial>
          <maxmem>512m</maxmem>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.maven.version}</version>
        <configuration>
          <module>org.drools.guvnor.FastCompiledGuvnorNGShowcase</module>
          <logLevel>INFO</logLevel>
          <compileSourcesArtifacts>
            <compileSourcesArtifact>org.uberfire:uberfire-api</compileSourcesArtifact>
            <compileSourcesArtifact>org.uberfire:widgets-core</compileSourcesArtifact>
            <compileSourcesArtifact>org.uberfire:widgets-commons</compileSourcesArtifact>
            <compileSourcesArtifact>org.uberfire:uberfire-workbench</compileSourcesArtifact>
          </compileSourcesArtifacts>
          <runTarget>org.drools.guvnor.GuvnorNGShowcase/Guvnor.html</runTarget>
          <extraJvmArgs>-Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
          <soyc>false</soyc>
          <hostedWebapp>src/main/webapp/</hostedWebapp>
          <server>org.jboss.errai.cdi.server.gwt.JettyLauncher</server>
          <!-- drools-compiler has dependency on org.eclipse.jdt.core.compiler:ecj:jar:3.5.1:compile, see http://code.google.com/p/google-web-toolkit/issues/detail?id=4479 -->
          <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
        </configuration>
        <executions>
          <execution>
            <id>gwt-clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
          <execution>
            <id>gwt-compile</id>
            <goals>
              <goal>resources</goal>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warName>${project.artifactId}</warName>
          <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
          <packagingExcludes>**/javax/**/*.*,**/client/**/*.class</packagingExcludes>

          <!--<webResources>-->
          <!--<resource>-->
          <!--&lt;!&ndash; this is relative to the pom.xml directory &ndash;&gt;-->
          <!--<directory>src/${webDescriptor}</directory>-->
          <!--</resource>-->
          <!--</webResources>-->
        </configuration>
      </plugin>

      <!-- Tests are skipped by default because they require additional GWT dependencies. Run mvn with
        -Pintegration-test to enable testing. -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>

      <!-- TODO {manstis} Ensure in porcelli's refactoring -->
      <!-- Ensure the generated source files are included in the source path -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <id>add-generated-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>target/generated-sources/annotations</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jboss.errai</groupId>
        <artifactId>jacoco-gwt-maven-plugin</artifactId>
        <version>0.5.4.201202141554</version>
        <executions>
          <execution>
            <id>jacoco-gwt-prepare-agent</id>
            <phase>initialize</phase>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-gwt-report</id>
            <phase>site</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}</directory>
              <includes>
                <include>www-test/**</include>
                <include>.gwt/**</include>
                <include>.errai/**</include>
                <include>src/main/webapp/org.drools.guvnor.GuvnorNGShowcase/**</include>
                <include>src/main/webapp/app/**</include>
                <include>src/main/webapp/WEB-INF/deploy/**</include>
                <include>src/main/webapp/WEB-INF/lib/**</include>
                <include>src/main/webapp/WEB-INF/classes/**</include>
                <include>**/gwt-unitCache/**</include>
                <include>**/*.JUnit/**</include>
                <include>target/generated-sources/**</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <versionRange>[2.3.0,)</versionRange>
                    <goals>
                      <goal>resources</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute/>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.jboss.errai</groupId>
                    <artifactId>jacoco-gwt-maven-plugin</artifactId>
                    <versionRange>[0.0,)</versionRange>
                    <goals>
                      <goal>prepare-agent</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
